# quick-start-python

./: README.md  pyproject.toml  requirements.txt
start/: __main__.py  main.py
